ndb - bug#44195 - increase size of protected area, to make sure that multiple threads dont access data in parallel